[package]
name = "experiment-dict-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
csv = "1.3.1"
futures = "0.3.31"
rig-core = "0.6.1"
shlex = "1.3.0"
# tokio = "1.43.0"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "test_cli"

[[bin]]
name = "main"
path = "src/main.rs"
